--- a/env/dev.env
+++ b/env/dev.env
@@ -5,7 +5,7 @@ DB_HOST="localhost"
 DB_NAME="test"
 DB_USERNAME="root"
 DB_PASSWORD="test"
-DB_PORT=3306
+DB_PORT="3306"
 SWAGGER_HOST_NAME="localhost:3000"
 SWAGGER_PROTOCOL="https"
 WEB_HOST_NAME="localhost:3000"
