--- a/env/prod.env
+++ b/env/prod.env
@@ -1,13 +1,14 @@
 API_BASE_PATH="api"
-API_HOST_NAME="prescriber.herokuapp.com"
+API_HOST_NAME="app-gsb-back.herokuapp.com"
 API_PROTOCOL="https"
-DB_HOST="gi6kn64hu98hy0b6.chr7pe7iynqr.eu-west-1.rds.amazonaws.com"
+DB_HOST="eu-cdbr-west-03.cleardb.net"
 DB_PORT="3306"
-DB_USERNAME="n6uviko7h1v41es8"
-DB_PASSWORD="yjnb4spj55jr2iwl"
-DB_NAME="smug8t1g8ftbp15j"
-SWAGGER_HOST_NAME="prescriber.herokuapp.com"
+DB_USERNAME="b9cbf5245eec3a"
+DB_PASSWORD="4d0e36e5"
+DB_NAME="gsbProd"
+SWAGGER_HOST_NAME="app-gsb-back.herokuapp.com"
 SWAGGER_PROTOCOL="https"
-WEB_HOST_NAME="prescriber-front.herokuapp.com"
+WEB_HOST_NAME="app-gsb.herokuapp.com"
 WEB_PROTOCOL="http"
 NODE_ENV="prod"
+
