--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "postinstall": "npm run start:prod",
+    "prestart:prod": "rimraf dist && npm run build",
+    "postinstall": "npm run prestart:prod",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -44,7 +45,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "swagger-ui-express": "^4.1.3",
-    "typeorm": "^0.2.24"
+    "typeorm": "^0.2.24",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.14.2",
@@ -81,5 +83,8 @@
     },
     "coverageDirectory": "./coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": "10.15.3"
   }
 }
