--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
     "dev": "nodemon --config nodemon.debug.json",
-    "start:dev": "nest start --watch",
+    "prestart:prod": "rm -rf dist && tsc",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "prestart:prod": "rimraf dist && npm run build",
-    "postinstall": "npm run prestart:prod",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
     "test:watch": "jest --watch",
