--- a/env/prod.env
+++ b/env/prod.env
@@ -3,12 +3,11 @@ API_HOST_NAME="app-gsb-back.herokuapp.com"
 API_PROTOCOL="https"
 DB_HOST="eu-cdbr-west-03.cleardb.net"
 DB_PORT="3306"
-DB_USERNAME="b9cbf5245eec3a"
-DB_PASSWORD="4d0e36e5"
+DB_USERNAME="b5973763f377d3"
+DB_PASSWORD="cb194ff5"
 DB_NAME="gsbProd"
 SWAGGER_HOST_NAME="app-gsb-back.herokuapp.com"
 SWAGGER_PROTOCOL="https"
 WEB_HOST_NAME="app-gsb.herokuapp.com"
 WEB_PROTOCOL="http"
-NODE_ENV="prod"
-
+NODE_ENV="production"
