--- a/env/prod.env
+++ b/env/prod.env
@@ -2,7 +2,7 @@ API_BASE_PATH="api"
 API_HOST_NAME="app-gsb-back.herokuapp.com"
 API_PROTOCOL="https"
 DB_HOST="eu-cdbr-west-03.cleardb.net"
-DB_PORT="3306"
+DB_PORT=3306
 DB_USERNAME="b5973763f377d3"
 DB_PASSWORD="cb194ff5"
 DB_NAME="gsbProd"
