--- a/env/prod.env
+++ b/env/prod.env
@@ -5,9 +5,9 @@ DB_HOST="eu-cdbr-west-03.cleardb.net"
 DB_PORT=3306
 DB_USERNAME="b5973763f377d3"
 DB_PASSWORD="cb194ff5"
-DB_NAME="gsbProd"
+DB_NAME="heroku_cbbbaf4dec5b1ee"
 SWAGGER_HOST_NAME="app-gsb-back.herokuapp.com"
 SWAGGER_PROTOCOL="https"
 WEB_HOST_NAME="app-gsb.herokuapp.com"
 WEB_PROTOCOL="http"
-NODE_ENV="production"
+NODE_ENV="prod"
