--- a/env/prod.env
+++ b/env/prod.env
@@ -10,4 +10,4 @@ SWAGGER_HOST_NAME="app-gsb-back.herokuapp.com"
 SWAGGER_PROTOCOL="https"
 WEB_HOST_NAME="app-gsb.herokuapp.com"
 WEB_PROTOCOL="http"
-NODE_ENV="prod"
+NODE_ENV="production"
